[gd_scene load_steps=3 format=3 uid="uid://cch2g4nm34cma"]

[ext_resource type="Script" path="res://screens/tictactoe/tictactoe.gd" id="1_144f3"]
[ext_resource type="Texture2D" uid="uid://bajru73r8qdlo" path="res://screens/minesweeper/assets/type1.svg" id="2_khbk1"]

[node name="TicTacToe" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_144f3")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -154.0
offset_right = 154.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "TIC TAC TOE"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -240.5
offset_right = 154.0
offset_bottom = 240.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="GridContainer_TicTacToe" type="GridContainer" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 3

[node name="VBoxContainer_infoBox" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label_turn" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainer_infoBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "player1"

[node name="TextureRect_currentPlayer" type="TextureRect" parent="HBoxContainer/VBoxContainer/VBoxContainer_infoBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_khbk1")
expand_mode = 2
stretch_mode = 4

[node name="Button_reset" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer_infoBox"]
layout_mode = 2
text = "Reiniciar"

[node name="Button_return" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer_infoBox"]
layout_mode = 2
text = "Menu"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Victorias:"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label_player_1" type="Label" parent="HBoxContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "player1"

[node name="Label_player1_streak" type="Label" parent="HBoxContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "0"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label_player_2" type="Label" parent="HBoxContainer/VBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "player2"

[node name="Label_player2_streak" type="Label" parent="HBoxContainer/VBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "0"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/cell" to="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/cell" method="_on_cell_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17481" to="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17481" method="_on_cell_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17482" to="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17482" method="_on_cell_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17483" to="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17483" method="_on_cell_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17484" to="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17484" method="_on_cell_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17485" to="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17485" method="_on_cell_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17486" to="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17486" method="_on_cell_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17487" to="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17487" method="_on_cell_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17488" to="HBoxContainer/VBoxContainer/GridContainer_TicTacToe/@TextureButton@17488" method="_on_cell_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer_infoBox/Button_reset" to="." method="_on_button_reset_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer_infoBox/Button_return" to="." method="_on_button_return_pressed"]
